backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medscloud-backend-service
spec:
  selector:
    app.kubernetes.io/name: medscloud-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
