backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
     name: medscloud-backend
     annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/add-base-url: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /$1
      nginx.ingress.kubernetes.io/service-upstream: "true"
      nginx.ingress.kubernetes.io/proxy-body-size: 10M
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/(.+)
        pathType: Prefix
        backend:
          service:
            name: medscloud-backend-service
            port:
              number: 8000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: medscloud-frontend-service
            port:
              number: 8000
